[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/Enemies/enemy_elolik.gd" type="Script" id=1]
[ext_resource path="res://Data/Graphics/Entities/Elolik_triangle.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, -64, 56, 64, -56, 64 )

[node name="Elolik" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -4.37114e-08, 1, -1, -4.37114e-08, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 5.0
friction = 0.0
bounce = 1.0
gravity_scale = 0.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 3
contact_monitor = true
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 192
config/lifetime = 1.0
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 16.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.784314, 0.0784314, 0.0784314, 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/rot = -90.0
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]

transform/rot = -90.0
transform/scale = Vector2( 0.5, 1 )
texture = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]

transform/rot = -90.0
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="wall_detector" type="RayCast2D" parent="."]

transform/pos = Vector2( -48, -48 )
enabled = true
cast_to = Vector2( 192, 0 )
layer_mask = 1
type_mask = 3

[node name="wall_detector1" type="RayCast2D" parent="."]

transform/pos = Vector2( -48, 48 )
enabled = true
cast_to = Vector2( 192, 0 )
layer_mask = 1
type_mask = 3

[connection signal="body_enter" from="." to="." method="_on_body_enter"]


